# PipelineRL

./: .gitignore  Makefile  README.md  debug.sh  env_fleet.sh  evaluate.py  example_run.sh  llm.sh  llm_bench.py  llm_bench_async.py  monitor_jobs.sh  pyproject.toml  qwen25_05B-instruct.yaml  qwen35_9b_terminal.sh  run_workarena_actor.sh  submit_eai_math_7b_8gpu.sh  submit_eai_math_7b_multinode.sh  submit_eai_math_7b_multinode_ds_fastllm_branch.sh  submit_eai_math_7b_multinode_ds_vllm_v1.sh  tamia_setup.sh  terminal_exp.sh
conf/: agentic_tools.yaml  apriel.yaml  apriel_agentic_tools.yaml  apriel_coding.yaml  apriel_ifeval.yaml  apriel_ifeval_inst_list.yaml  apriel_logic.yaml  apriel_mixed.yaml  apriel_rafa.yaml  base.yaml  chartqa.yaml  coding.yaml  coding_v2.yaml  counting.yaml  counting_tapeagent.yaml  cube_math_baseline_rl.yaml  cube_math_lamer_rl.yaml  cube_math_rl.yaml  cube_math_tool.yaml  cube_miniwob.yaml  cube_miniwob_hint_b1.yaml  cube_miniwob_hint_b1_mi.yaml  cube_miniwob_hint_ta1.yaml  cube_miniwob_hint_ta1_mi.yaml  cube_miniwob_hint_ta2.yaml  cube_miniwob_hint_ta2_mi.yaml  cube_miniwob_hint_ta2_remine.yaml  cube_rl.yaml  cube_sokoban_lamer_rl.yaml  cube_sokoban_rl.yaml  debug_finetune_preprocessor_sft.yaml  deep_researcher.yaml  deep_researcher_8gpu.yaml  fn_calling.yaml  ifeval.yaml  logic.yaml  math.yaml  math_code.yaml  math_ppo.yaml  math_trial.yaml  (+28 more)
conf/actor/: web.yaml
conf/cubes/: base.yaml
conf/debug/: multi_domain.yaml
conf/deepspeed/: deepspeed_stage3_bf16_offload.json
conf/domain_mix/: README.md  balanced.yaml  base.yaml  coding_heavy.yaml  main_mix.yaml  math_coding_70_30.yaml
conf/domain_params/: privacy_agent.yaml  privacy_hopqa.yaml
conf/domain_rollouts/: base.yaml
conf/finetune/: actor_critic_hl_gauss.yaml  base.yaml  grpo.yaml  gspo.yaml  nll.yaml  value_pretrain.yaml  vapo.yaml
conf/hint_banks/: miniwob_3b_v2.json  miniwob_7b_r8.json
conf/mcp/: python.json
conf/multi_domain/: base.yaml  main_mix.yaml
conf/rewards/: pure_success2.yaml  tir_pure_success.yaml
conf/swe/: preprocess.yaml
cube_pipelinerl/: domain.py  launch.py  utils.py
docs/: FAST_LLM_INTEGRATION.md  privacy_hopqa_multi_objective_rewards.md
examples/interactive/: ds_4node.sh  fast_llm_4node.sh
experiments/olmer/env_speed/: debug.sh  llm_bench.py
launch/: __init__.py  config.py  launch_job.py  personal_config.py  remote.py  run_sweep.py
launch/training_configs/: __init__.py  debug.py  main.py
pipelinerl/: actor.py  async_llm.py  async_vlm.py  browse.py  compat.py  cot_math_agent.py  countdown_utils.py  domain_sampling.py  finetune_loop.py  launch.py  llm.py  llm_router.py  load_datasets.py  math_rollouts.py  metrics.py  preprocess.py  preprocess_helpers.py  rl_tool_parser_plugin.py  rollouts.py  run_actor.py  run_finetune.py  run_llm.py  run_preprocess.py  sft_data.py  shared_memory_array.py  state.py  streams.py  torch_utils.py  transformers_compat.py  utils.py  verifier_api.py  vision_processor_utils.py  vllm0.py  vllm1.py  vllm_quantization.py  world.py
pipelinerl/cube_rl/: domain.py  hint_bank.py  hint_refresh.py  launch.py  ray_cluster.py  ray_worker_logging.py  registry.py  routing.py  utils.py  worker_pool.py
pipelinerl/curriculum/: __init__.py  bandit.py  feedback.py  iterator.py  state.py
pipelinerl/domains/: README.md  __init__.py  dispatcher.py
pipelinerl/domains/agentic_fn_calling/: load_datasets.py  rollouts.py  try.py.py  verifier_api.py
pipelinerl/domains/apriel_mixed/: load_datasets.py  rollouts.py  verifier_api.py
pipelinerl/domains/chartqa/: chartqa.py  load_datasets.py
pipelinerl/domains/coding/: __init__.py  dataset.py  executor.py  livecodebench.py  load_dataset.py  load_datasets.py  remote_code_executor.py  rollouts.py  sandbox_fusion.py  test_sandbox.py  try_sandbox_code.py  verifier_api.py
pipelinerl/domains/counting/: counting.py  tapeagent.py
pipelinerl/domains/cube/: agents.py  dataset.py  episode_runner.py  result_builder.py  reward_shaping.py  worker.py
pipelinerl/domains/deep_research/: tapeagents_rollouts.py
pipelinerl/domains/deep_researcher/: __init__.py  load_datasets.py  rollouts.py  tools.py  verifier_api.py
pipelinerl/domains/fn_calling/: __init__.py  dataset.py  rollouts.py  verifier_api.py
pipelinerl/domains/guessing/: guessing.py
pipelinerl/domains/ifeval/: __init__.py  dataset.py  google_ifeval.py  load_datasets.py  rollouts.py  verifier_api.py  verifier_api_inst_list.py
pipelinerl/domains/logic/: __init__.py  dataset.py  load_datasets.py  rollouts.py  verifier_api.py
pipelinerl/domains/math/: __init__.py  load_datasets.py  minimal_rollout.py  rollouts.py  verifier_api.py  verifier_api_legacy.py
pipelinerl/domains/mathv/: README.md  __init__.py  evaluation.py  load_datasets.py  mathv.py
pipelinerl/domains/mcp/: __init__.py  env_server.py  rollouts.py  steps.py
pipelinerl/domains/miniwob/: README.md  __init__.py  al2_rollouts.py  environment_server.py  load_tasks.py  (+1 more)
pipelinerl/entrypoints/: actor.py  run_actor_ray.py  run_environment.py  run_environment_fleet.py  run_sft_data.py  verifier.py
pipelinerl/finetune/: checkpoints.py  data.py  eval.py  hl_gauss_loss.py  logging_.py  lora.py  memory_debug.py  optim.py  types.py  utils.py  value_model.py
pipelinerl/miniwob/: README.md
pipelinerl/ray/: actor.py  backend.py  logging.py  manager.py  ray_actor.py  ray_cluster.py  utils.py  worker.py
results_viewer/: __init__.py  __main__.py  app.py
results_viewer/static/: app.js  index.html  styles.css
scripts/: grpo.sh  run.sh  run_miniwob_actor.sh  submit.sh  vapo.sh
tests/: __init__.py  conftest.py  distributed_trainer_helper.py  fast_llm_trainer_helper.py  server_weight_update_utils.py  sync_helper.py  test_actor_error_handling.py  test_async_llm_abort_retry.py  test_hint_refresh.py  test_launch_process_monitoring.py  test_terminal_process_group.py  test_terminal_pytest_parse.py  test_terminal_rollout_actions.py  test_vllm1_fast_llm_broadcast.py  test_vllm1_integration.py  test_world_multinode.py  trainer_test_utils.py  vllm_engine_helper.py  weight_update_utils.py
(+194 files in other folders)
