[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "numpy>=1.26.0",
    "packaging>=23.0",
    "torch~=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pipelinerl"
version = "0.1.0"
description = "A scalable asynchronous reinforcement learning implementation with in-flight weight updates."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "ServiceNow" },
]
dependencies = [
    "aiohttp>=3.9.0",
    "vllm==0.18.1",
    "accelerate==1.13.0",
    "deepspeed~=0.18.0",
    "datasets>=2.21.0",
    "transformers~=4.57.0",
    "fastapi>=0.115.0",
    "joblib>=1.3.2",
    "jsonref>=1.1.0",
    "litellm>=1.61.0",
    "packaging>=23.0",
    "pandas>=2.2.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.9.0",
    "peft==0.12.0",
    "ring-flash-attn==0.1.8",
    "math-verify[antlr4_9_3]==0.8.0",
    "orjson~=3.11.0",
    "requests>=2.31.0",
    "redis~=7.0.0",
    "safetensors>=0.4.0",
    "tenacity>=8.2.0",
    "uvicorn>=0.29.0",
    "uvloop>=0.19.0",
    "wandb>=0.16.0",
    "hydra-core>=1.3.2",
    "flash-attn",
    "debugpy>=1.8.20",
    "cube-standard",
]

[project.optional-dependencies]
tapeagents = [
    "Tapeagents[finetune]==0.1.16",
]
lora = [
    "peft~=0.18.0",
]
miniwob = [
    "browsergym~=0.14.0",
]
coding = [
    "sandbox-fusion>=0.3.7",
]
# Domain-specific dependencies
math_tool_use = [
    "sandbox-fusion>=0.3.7",
]
# Install all domain dependencies
domains = [
    "pipelinerl[math_tool_use]",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["pipelinerl*"]

[tool.uv]
environments = ["sys_platform == 'linux'"]
# tapeagents==0.1.16 requires transformers<4.52 and accelerate<1.8, which conflict with the project's versions.
# Overrides to allow resolution to proceed; tapeagents extra will be broken at runtime until it supports newer versions.
override-dependencies = [
    "transformers>=4.51.0",
    "accelerate>=1.7.0",
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.6cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }
cube-harness = { path = "../cube-harness", editable = true }
math-tool-use = { path = "../cube-harness/cubes/math-tool-use", editable = true }
cube-standard = { path = "../cube-standard" }
