[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "numpy>=1.26.0",
    "packaging>=23.0",
    "torch~=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pipelinerl"
version = "0.1.0"
description = "A scalable asynchronous reinforcement learning implementation with in-flight weight updates."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "ServiceNow" },
]
dependencies = [
    "aiohttp>=3.9.0",
    "vllm==0.18.1",
    "accelerate==1.13.0",
    "deepspeed~=0.18.0",
    "datasets>=2.21.0",
    "transformers~=4.57.0" ,
    "fastapi>=0.115.0",
    "joblib>=1.3.2",
    "jsonref>=1.1.0",
    "litellm>=1.61.0",
    "packaging>=23.0",
    "pandas>=2.2.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
    "pydantic>=2.9.0",
    "ring-flash-attn==0.1.8",
    "flash-attn==2.8.3",
    "math-verify[antlr4_9_3]==0.8.0",
    "orjson~=3.11.0",
    "requests>=2.31.0",
    "redis~=7.0.0",
    "safetensors>=0.4.0",
    "tenacity>=8.2.0",
    "uvicorn>=0.29.0",
    "uvloop>=0.19.0",
    "wandb>=0.16.0",
    "peft~=0.18.0",
    "hydra-core>=1.3.2",
]

[project.optional-dependencies]
# Domain-specific dependencies
miniwob = [
    "browsergym~=0.14.0",
]
coding = [
    "sandbox-fusion>=0.3.7",
]
fn_calling = [
    "bfcl-eval>=2025.6.8",
]
logic = [
    # i3-logic verification code is vendored in pipelinerl/domains/logic/i3_logic/
    # (source: https://github.com/PrimeIntellect/i3-logic)
]
ifeval = [
    # IFEvalG bundled module dependencies
    "langdetect",
    "absl-py",
]
cube = [
    "cube-harness",
    "cube-standard",
    "miniwob-cube",
]
# Install all domain dependencies
domains = [
    "pipelinerl[coding,fn_calling,logic,ifeval]",
]

[tool.uv]
override-dependencies = [
    "numpy==2.2.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipelinerl*"]


[tool.uv.sources]
flash-attn = { url = "https://github.com/lesj0610/flash-attention/releases/download/v2.8.3-cu12-torch2.10-cp312/flash_attn-2.8.3%2Bcu12torch2.10cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
cube-harness = { path = "../cube-harness", editable = true }
miniwob-cube = { path = "../cube-harness/cubes/miniwob", editable = true }
cube-standard = { git = "https://github.com/The-AI-Alliance/cube-standard.git", branch = "dev" }